# graphics-engine

./: CMakeLists.txt  README.md  app
app.dSYM/Contents/Resources/DWARF/: app
assets/bone_swords/: license.txt  scene.gltf
include/: mesh.h  model.h  shader.h
shaders/: model_loading.fs  model_loading.vs  shader.fs  shader.vs
src/: Shader.cpp  glad.c  main.cpp
